# variant-scorer

./: Dockerfile  pyproject.toml
src/: aggregate.py  main.py  variant_annotation.py  variant_filter.py  variant_scoring.py  variant_scoring_per_chrom.py  variant_scoring_per_chunk.py  variant_shap.py  variant_summary_across_folds.py  variant_viz.py
src/utils/: argmanager.py  helpers.py  shap_utils.py
