[project]
name = "varscore"
requires-python = "==3.8.20"
version = "0.0.1"
authors = [
	{ name = "Soumya Kundu", email = "soumyak@stanford.edu" },
	{ name = "Ivy Evergreen", email = "mail@virtual.gf" },
]
description = "Obtains annotations for genetic variants."
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
	"deepdish==0.3.7",
	"h5py>=2.10.0",
	"matplotlib==3.7.5",
	"numpy==1.23.4",
	"pandas==1.3.4",
	"scikit-image==0.21.0",
	"scipy==1.10.1",
	"shap==0.44.1",
	"tensorflow==2.8.1",
	"tensorflow-probability==0.14.0",
	"tqdm==4.66.5",
	"pybedtools==0.10.0",
]

[project.scripts]
varscore = "main:cli"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
